add more screen in user module

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,11 +34,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Babay_Mart_Management_Systems
 excludes=
 file.reference.mysql-connector-java-8.0.26.jar=C:\\Users\\Chhun Lay\\Downloads\\Compressed\\icons_mysqlConnector\\icons_mysqlConnector\\mysql-connector-java-8.0.26.jar
+file.reference.mysql-connector-java-8.0.26.jar-1=D:\\My Document\\Java_development\\sql-bms\\mysql-connector-java-8.0.26.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.26.jar}
+    ${file.reference.mysql-connector-java-8.0.26.jar}:\
+    ${file.reference.mysql-connector-java-8.0.26.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
