--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Chhun Lay\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=C:\\Users\\ADMIN\\AppData\\Roaming\\NetBeans\\18\\build.properties
