--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,14 +33,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Babay_Mart_Management_Systems
 excludes=
+file.reference.mysql-connector-java-5.1.44.jar=..\\..\\Mysql\\mysql-connector-java-5.1.44.jar
 file.reference.mysql-connector-java-8.0.26.jar=C:\\Users\\Chhun Lay\\Downloads\\Compressed\\icons_mysqlConnector\\icons_mysqlConnector\\mysql-connector-java-8.0.26.jar
-file.reference.mysql-connector-java-8.0.26.jar-1=D:\\My Document\\Java_development\\sql-bms\\mysql-connector-java-8.0.26.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-java-8.0.26.jar}:\
-    ${file.reference.mysql-connector-java-8.0.26.jar-1}
+    ${file.reference.mysql-connector-java-5.1.44.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
